--- a/package.json
+++ b/package.json
@@ -5,19 +5,25 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dist": "webpack --config webpack.config.js --progress",
-    "start": "webpack-dev-server --config webpack.config.js --inline --progress --colors"
+    "start": "cross-env NODE_ENV=development webpack-dev-server --open --progress --colors",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --progress --colors",
+    "prod": "cross-env NODE_ENV=production webpack --progress --colors"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^7.1.2",
+    "clean-webpack-plugin": "^0.1.17",
+    "cross-env": "^5.1.0",
     "css-loader": "^0.28.4",
-    "extract-text-webpack-plugin": "^2.1.2",
+    "cssnano": "^3.10.0",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
+    "postcss-functions": "^3.0.0",
     "postcss-loader": "^2.0.6",
+    "precss": "^2.0.0",
     "style-loader": "^0.18.2",
+    "uglifyjs-webpack-plugin": "^1.0.0-beta.3",
     "webpack": "^2.7.0",
     "webpack-dev-server": "^2.6.1"
   }
