--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "css-3d-test",
+  "name": "test-demo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -18,7 +18,9 @@
     "css-loader": "^0.28.4",
     "cssnano": "^3.10.0",
     "file-loader": "^0.11.2",
+    "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
+    "html-withimg-loader": "^0.1.16",
     "postcss-functions": "^3.0.0",
     "postcss-loader": "^2.0.6",
     "precss": "^2.0.0",
@@ -26,5 +28,8 @@
     "uglifyjs-webpack-plugin": "^1.0.0-beta.3",
     "webpack": "^2.7.0",
     "webpack-dev-server": "^2.6.1"
+  },
+  "dependencies": {
+    "jquery": "^1.12.4"
   }
 }
