--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cross-env": "^5.1.0",
     "css-loader": "^0.28.4",
     "cssnano": "^3.10.0",
+    "extract-text-webpack-plugin": "^3.0.1",
     "file-loader": "^0.11.2",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
@@ -26,10 +27,12 @@
     "precss": "^2.0.0",
     "style-loader": "^0.18.2",
     "uglifyjs-webpack-plugin": "^1.0.0-beta.3",
-    "webpack": "^2.7.0",
+    "webpack": "^3.8.1",
     "webpack-dev-server": "^2.6.1"
   },
   "dependencies": {
-    "jquery": "^1.12.4"
+    "bootstrap": "^3.3.7",
+    "jquery": "^1.12.4",
+    "pinyin": "^2.8.3"
   }
 }
